--- a/app/src/main/res/layout/activity_comment.xml
+++ b/app/src/main/res/layout/activity_comment.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:local="http://schemas.android.com/apk/res-auto"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -10,6 +12,11 @@
     tools:context=".Activities.CommentActivity"
     android:orientation="vertical"
     android:background="#000000">
+
+    <include
+        layout="@layout/frag_toolbar_main"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
     <include
         layout="@layout/item_mainfeed"
@@ -61,8 +68,13 @@
         android:textSize="20sp"
         android:textColor="#ffffff"
         android:maxLength="141"
+            android:maxLines="5"
+            android:layout_gravity="center_vertical|center_horizontal"
+            android:gravity="top|left"
+            android:scrollHorizontally="false"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+            android:inputType="textMultiLine|textCapSentences"
         android:hint="@string/comment"
             android:layout_marginRight="55dp" />
         <Button
