--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -4,33 +4,37 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:float="http://schemas.android.com/tools"
-    xmlns:local="http://schemas.android.com/apk/res-auto"
     android:id="@+id/scrollView1"
     android:weightSum="5"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:background="#0f0202">
+    android:background="#000000"
+    xmlns:local="http://schemas.android.com/apk/res-auto">
 
     <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbarSignUp"
+        android:id="@+id/toolbarSignup"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="@android:color/transparent"
+        android:layout_height="wrap_content"
         local:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        local:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-        />
+        local:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+
+    <ScrollView
+        android:fitsSystemWindows="true"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fillViewport="true">
+
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_gravity="center_vertical"
-        android:layout_weight="3"
         android:paddingLeft="70dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <com.wrapp.floatlabelededittext.FloatLabeledEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp">
+            android:layout_marginTop="35dp">
             <EditText
                 android:singleLine="true"
                 android:layout_width="250dp"
@@ -118,6 +122,7 @@
         </com.wrapp.floatlabelededittext.FloatLabeledEditText>
 
     </LinearLayout>
+    </ScrollView>
 
 </LinearLayout>
 
