--- a/app/src/main/res/layout/frag_login.xml
+++ b/app/src/main/res/layout/frag_login.xml
@@ -8,7 +8,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
     <LinearLayout
@@ -21,9 +21,9 @@
         <TextView
             android:id="@+id/tvIdexTitle"
             android:textColor="#FDD017"
-            android:text="@string/app_name"
+            android:text="@string/app_title"
             android:textStyle="bold|italic"
-            android:textSize="60sp"
+            android:textSize="55sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
@@ -70,16 +70,17 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal">
+        android:gravity="center_horizontal"
+        android:layout_marginTop="10dp">
 
         <ImageButton
-            android:layout_width="140dp"
+            android:layout_width="150dp"
             android:layout_height="60dp"
             android:id="@+id/imgbLogin"
             android:background="@drawable/login" />
 
         <ImageButton
-            android:layout_width="100dp"
+            android:layout_width="150dp"
             android:layout_height="60dp"
             android:id="@+id/imgbRegister"
             android:background="@drawable/register" />
