--- a/app/src/main/res/layout/frag_user_stats.xml
+++ b/app/src/main/res/layout/frag_user_stats.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content">
 
     <LinearLayout
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="15dp"
         android:layout_marginLeft="25dp"
         android:layout_marginRight="25dp"
 
@@ -28,7 +28,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/linearLayout"
         android:gravity="center_horizontal"
-        android:layout_marginTop="30dp">
+        android:layout_marginTop="15dp">
 
         <TextView
             android:layout_width="wrap_content"
@@ -51,7 +51,7 @@
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="15dp"
             android:gravity="center_horizontal">
 
             <TextView
@@ -75,7 +75,7 @@
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text="(1 Year, 3 Months)"
                 android:id="@+id/etSinceSignedUp"
-                android:layout_marginBottom="30dp"
+                android:layout_marginBottom="15dp"
                 android:textColor="#E6BE8A" />
 
         </LinearLayout>
@@ -85,7 +85,7 @@
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="10dp"
             android:layout_marginLeft="45dp"
             android:layout_marginRight="35dp">
 
@@ -114,7 +114,7 @@
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="25dp">
+                android:layout_marginTop="10dp">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -137,7 +137,7 @@
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="25dp">
+                android:layout_marginTop="10dp">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -158,25 +158,62 @@
 
         </LinearLayout>
 
+        <RelativeLayout
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <RelativeLayout
+                android:layout_marginBottom="67dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="bottom">
+
+                <Button
+                    android:layout_width="100dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="bottom|left"
+                    android:id="@+id/bStatRoll"
+                    android:background="@drawable/roll" />
+
+                <Button
+                    android:layout_width="100dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="bottom|center"
+                    android:id="@+id/bStatLog"
+                    android:background="@drawable/log"
+                    android:layout_alignParentTop="true"
+                    android:layout_centerHorizontal="true" />
+
+                <Button
+                    android:layout_width="100dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="bottom|right"
+                    android:id="@+id/bStatInfo"
+                    android:background="@drawable/info"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true" />
+            </RelativeLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="fill_parent"
+                android:layout_gravity="bottom"
+                android:layout_alignParentBottom="false"
+                android:gravity="bottom">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="80dp"
+                    android:id="@+id/bottomBanner"
+                    android:background="@drawable/bottom_banner" />
+
+            </LinearLayout>
+
+        </RelativeLayout>
+
 
     </LinearLayout>
-    <Button
 
-        android:layout_width="100dp"
-        android:layout_height="50dp"
-        android:layout_gravity="bottom|left"
-        android:id="@+id/bStatRoll"
-        android:background="@drawable/roll" />
-    <Button
-        android:layout_width="100dp"
-        android:layout_height="50dp"
-        android:layout_gravity="bottom|center"
-        android:id="@+id/bStatLog"
-        android:background="@drawable/log" />
-    <Button
-        android:layout_width="100dp"
-        android:layout_height="50dp"
-        android:layout_gravity="bottom|right"
-        android:id="@+id/bStatInfo"
-        android:background="@drawable/info" />
 </android.support.design.widget.CoordinatorLayout>
