Graph fixed, now reading from right to left. Each click on the graph displays value and percent change. User can quit the app and they will not be logged out anymore.

--- a/app/src/main/res/layout/activity_dash.xml
+++ b/app/src/main/res/layout/activity_dash.xml
@@ -25,6 +25,7 @@
                 android:layout_width="match_parent"
                 android:id="@+id/dashLayout">
                 <EditText
+                    android:inputType="textCapSentences"
                     android:focusable="true"
                     android:padding="15dp"
                     android:id="@+id/editTextDash"
