--- a/app/src/main/res/layout/frag_login.xml
+++ b/app/src/main/res/layout/frag_login.xml
@@ -2,9 +2,9 @@
 
     <ScrollView
         xmlns:android="http://schemas.android.com/apk/res/android"
-        android:background="@drawable/dark"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    android:layout_width="match_parent"
+        android:layout_height="match_parent"
+    android:background="#000000">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -18,17 +18,14 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp">
 
-        <TextView
-            android:id="@+id/tvIdexTitle"
-            android:textColor="#FDD017"
-            android:text="@string/app_title"
-            android:textStyle="bold|italic"
-            android:textSize="55sp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <ImageView
+            android:layout_width="280dp"
+            android:layout_height="110dp"
+            android:id="@+id/imgLogo"
+            android:layout_marginBottom="30dp"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="60dp"
-            android:layout_marginBottom="40dp" />
+            android:background="@drawable/top_banner"
+            android:layout_marginTop="40dp" />
 
         <TextView
             android:text="Username"
