--- a/app/src/main/res/layout/frag_toolbar_main.xml
+++ b/app/src/main/res/layout/frag_toolbar_main.xml
@@ -9,13 +9,27 @@
     xmlns:local="http://schemas.android.com/tools"
     android:background="#000000">
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <LinearLayout
+            android:paddingLeft="-30dp"
             android:layout_width="match_parent"
-            android:layout_height="90dp"
-            android:background="@drawable/top_banner"
-            local:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-            local:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:gravity="center">
+            <ImageView
+                android:layout_width="270dp"
+                android:layout_height="80dp"
+                android:background="@drawable/top_banner"
+                local:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+                local:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+            </ImageView>
+
+        </LinearLayout>
+    </android.support.v7.widget.Toolbar>
+
 
 </android.support.design.widget.CoordinatorLayout>
 
